<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">
    <ImageView
        android:id="@+id/cross_btn"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignRight="@+id/login_layout"
        android:layout_alignParentEnd="true"
        android:layout_gravity="right"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="12dp"
        android:padding="3dp"
        android:src="@drawable/ic_cross" />
    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:src="@drawable/login_logo" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/error_text_color">

            <EditText
                android:id="@+id/account_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/login_myAccount"
                android:inputType="text"
                android:textColor="@color/green"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:errorTextAppearance="@style/error_text_color"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/green">

            <EditText
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/login_myPassword"
                android:inputType="textPassword"
                android:textColor="@color/green"
                android:textSize="16sp"
                android:textStyle="bold" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_round01"
            android:text="@string/clickMe"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/forgetpassword_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                android:text="@string/login_forgetPassword"
                android:textColor="@color/green"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/noSignUpYet_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginRight="7dp"
                android:padding="5dp"
                android:text="@string/login_nosignUpYet"
                android:textColor="@color/green"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:text="@string/login_anotherlogin"
            android:textColor="@color/green"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/fb_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_icon_fb_" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp" />

    </LinearLayout>
</RelativeLayout>